# DAMQT

./: .gitignore  CMakeLists.txt  CNAME  README.md
doc/manual/: DAMQT_3.2.0_manual.tex
src/DAM320/: CMakeLists.txt  DAMFRAD320.F90  DAMORB320.F90
src/DAM320_mpi/: CMakeLists.txt  DAM320_GLOBAL_mpi.F90  DAMDEN320_mpi.F90  DAMDENGRAD320_mpi.F90  DAMFIELD320_mpi.F90  DAMGTO320_mpi.F90  DAMISODEN320_mpi.F90  DAMISOPOT320_mpi.F90  DAMORB320_mpi.F90  DAMSGHOLE320_mpi.F90  DAMSTO320_mpi.F90
src/DAMGUI320/: CMakeLists.txt  geometryprocessor.cpp  glWidget.cpp  glWindow.cpp  isosurface.cpp  mainwindow.cpp  measures.cpp  mespimizer.cpp  molecule.cpp  run_mpi.sh  screenshot.cpp  shaders.qrc  surface.cpp  viewer2D.cpp  viewerdialog.cpp
src/DAMGUI320/include/: CMakeLists.txt  glWidget.h  glWindow.h  isosurface.h  mainwindow.h  measures.h  mespimizer.h  molecule.h  rotations.h  screenshot.h  surface.h  translations.h  viewerdialog.h
src/DAMZernike320/: CMakeLists.txt
src/DAMZernike320_mpi/: CMakeLists.txt
src/TDAM320/: CMakeLists.txt  DAMMESPIMIZER.F90  DAMTOPOGRAPHY.F90
src/TDAM320_mpi/: CMakeLists.txt  DAMTOPOGRAPHY_mpi.F90  TDAMGLOBAL16_mpi.F90
src/interfaces_320/: CMakeLists.txt  MOLPRO_out_interface.cpp
windows/: DAMQT320_Installer_17072025.iss  DAMQT320_Setup.exe_checksum  genera_cygwin64_min.sh
